# OpenSAR

./: .gitignore  AGENTS.md  README.md  USAGE_SAR_IMAGE.md  pyproject.toml  sar_image_generator.py  setup.py  test_render.py
data/: .gitkeep
docs/: CODE_REVIEW_2026-04-30.md
output/: .gitkeep
src/: main.py
src/clustering/: fingerprinter.py  scaffold.py
src/csar/: __init__.py
src/csar/clustering/: __init__.py  cluster.py
src/csar/io/: __init__.py  reader.py
src/csar/mcs/: __init__.py
src/csar/sar/: __init__.py
src/csar/scripts/: __init__.py
src/csar/visualization/: __init__.py  renderer.py  sar_table.py
src/io/: writer.py
src/mcs/: finder.py
src/sar/: __init__.py  analyzer.py  preprocessor.py
src/scripts/: proc.py
src/visualization/: utils.py
tests/: test_clustering.py  test_fingerprinter.py  test_mcs.py  test_preprocessor.py  test_reader.py  test_sar.py  test_scaffold.py
